# hotel-fyp

./: .gitignore  backupmark4.md  pyproject.toml
data/processed/: aspect_dimensions.json
results/: eval_results_20260501_181952.txt  eval_results_20260502_current.txt  eval_results_20260503_full.txt  eval_results_partial_dimensions_20260504_171019.txt
scripts/: build_dataset.py  build_vectors.py  extract_sql_to_parquet.py  run_eval.py  run_overnight_pipeline.ps1  run_pipeline.py  run_recommendations.py
src/expts/: run_hotelrec.py  run_hotelrec_expt.py
src/rec/: __init__.py
src/rec/dataset/: __init__.py  dataset.py  entities.py  reader.py
src/rec/hotel/: __init__.py  recommender.py
src/rec/hotel/evaluator/: __init__.py  evaluator.py
src/rec/hotel/ranker/: __init__.py  amenity_overlap.py  base.py  case_based.py  frequency_based.py  popularity.py  sentiment_enhanced.py  sentiment_similarity.py  weighted_hybrid.py
src/rec/pipelines/: extract_sql.py  sentiment.py
src/rec/util/: aspect_aliases.py  io.py  math.py  text.py
