[project]
name = "hotel-fyp"
version = "0.1.0"
description = "Hotel recommender and sentiment analysis thesis pipeline"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "openai",
    "pandas",
    "pyarrow",
    "pymysql",
    "scikit-learn",
    "sqlalchemy",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
